// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrappedSaveButton matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-justifyContent-17s6mgv r-marginVertical-r0h9e2 r-position-u8s1d r-right-zchlnj r-top-ipm5af"
  >
    <div
      className="css-view-1dbjc4n r-display-6koalj r-justifyContent-1777fci"
      data-testid="save_button"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "rgba(12,38,61,1.00)",
          "borderBottomColor": "rgba(0,175,255,1.00)",
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,175,255,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,175,255,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,175,255,1.00)",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "44px",
          "minWidth": "86px",
          "msFlexAlign": "stretch",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
        data-focusable={true}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "WebkitAlignSelf": "stretch",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": "50px",
            "borderBottomRightRadius": "50px",
            "borderTopLeftRadius": "50px",
            "borderTopRightRadius": "50px",
            "msFlexItemAlign": "stretch",
            "msGridRowAlign": "stretch",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
          style={
            Object {
              "WebkitAlignSelf": "stretch",
              "alignSelf": "stretch",
              "msFlexItemAlign": "stretch",
              "msGridRowAlign": "stretch",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
            >
              <div
                className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-majxgm r-lineHeight-rjixqe r-paddingTop-njp1lv r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-tsynxw"
                dir="auto"
              >
                Save
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WrappedSaveButton matches snapshot 2`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-justifyContent-17s6mgv r-marginVertical-r0h9e2 r-position-u8s1d r-right-zchlnj r-top-ipm5af"
  >
    <div
      className="css-view-1dbjc4n r-display-6koalj r-justifyContent-1777fci"
      data-testid="save_button"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "rgba(0,0,0,0.00)",
          "borderBottomColor": "rgba(0,175,255,1.00)",
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(0,175,255,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "1px",
          "borderRightColor": "rgba(0,175,255,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(0,175,255,1.00)",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "borderTopStyle": "solid",
          "borderTopWidth": "1px",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "44px",
          "minWidth": "86px",
          "msFlexAlign": "stretch",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
        data-focusable={true}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "WebkitAlignSelf": "stretch",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": "50px",
            "borderBottomRightRadius": "50px",
            "borderTopLeftRadius": "50px",
            "borderTopRightRadius": "50px",
            "msFlexItemAlign": "stretch",
            "msGridRowAlign": "stretch",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
          style={
            Object {
              "WebkitAlignSelf": "stretch",
              "alignSelf": "stretch",
              "msFlexItemAlign": "stretch",
              "msGridRowAlign": "stretch",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
            >
              <div
                className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-majxgm r-lineHeight-rjixqe r-paddingTop-njp1lv r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-tsynxw"
                dir="auto"
              >
                Title in SaveButton
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WrappedSaveButton matches snapshot 3`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-justifyContent-17s6mgv r-marginVertical-r0h9e2 r-position-u8s1d r-right-zchlnj r-top-ipm5af"
  >
    <div
      className="css-view-1dbjc4n r-display-6koalj r-justifyContent-1777fci"
      data-testid="save_button"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "rgba(12,38,61,1.00)",
          "borderBottomColor": "rgba(0,175,255,1.00)",
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,175,255,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,175,255,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,175,255,1.00)",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "44px",
          "minWidth": "86px",
          "msFlexAlign": "stretch",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
        data-focusable={true}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "WebkitAlignSelf": "stretch",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": "50px",
            "borderBottomRightRadius": "50px",
            "borderTopLeftRadius": "50px",
            "borderTopRightRadius": "50px",
            "msFlexItemAlign": "stretch",
            "msGridRowAlign": "stretch",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
          style={
            Object {
              "WebkitAlignSelf": "stretch",
              "alignSelf": "stretch",
              "msFlexItemAlign": "stretch",
              "msGridRowAlign": "stretch",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
            >
              <div
                className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-majxgm r-lineHeight-rjixqe r-paddingTop-njp1lv r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-tsynxw"
                dir="auto"
              >
                SaveButton with color
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WrappedSaveButton matches snapshot 4`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-justifyContent-17s6mgv r-marginVertical-r0h9e2 r-position-u8s1d r-right-zchlnj r-top-ipm5af"
  >
    <div
      className="css-view-1dbjc4n r-display-6koalj r-justifyContent-1777fci"
      data-testid="save_button"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "rgba(12,38,61,1.00)",
          "borderBottomColor": "rgba(0,175,255,1.00)",
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,175,255,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,175,255,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,175,255,1.00)",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "44px",
          "minWidth": "86px",
          "msFlexAlign": "stretch",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
        data-focusable={true}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "WebkitAlignSelf": "stretch",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": "50px",
            "borderBottomRightRadius": "50px",
            "borderTopLeftRadius": "50px",
            "borderTopRightRadius": "50px",
            "msFlexItemAlign": "stretch",
            "msGridRowAlign": "stretch",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
          style={
            Object {
              "WebkitAlignSelf": "stretch",
              "alignSelf": "stretch",
              "msFlexItemAlign": "stretch",
              "msGridRowAlign": "stretch",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
            >
              <div
                className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-majxgm r-lineHeight-rjixqe r-paddingTop-njp1lv r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-tsynxw"
                dir="auto"
              >
                SaveButton with custom delay
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
